# rdf

./: .gitignore  ChangeLog.md  LICENSE  README.md  pinned.nix  rdf.cabal  shell.nix  stack.yaml  update-cachix.sh
.circleci/: config.yml
bench/: Main.hs
src/Data/RDF/: Graph.hs  Internal.hs  ToRDF.hs  Types.hs
src/Data/RDF/Encode/: Common.hs  NQuads.hs
src/Data/RDF/Encoder/: Common.hs  NQuads.hs
src/Data/RDF/Parser/: Common.hs  IRI.hs  NQuads.hs
