name:                rdf
version:             0.1.0.0
synopsis:            Representation and Incremental Processing of RDF Data
 description:        Representation and Incremental Processing of RDF Data
homepage:            https://github.com/traviswhitaker/rdf
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
 copyright:          Travis Whitaker 2016
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
   exposed-modules:    Data.RDF.Types
                     , Data.RDF.Parser.IRI
                     , Data.RDF.Parser.NQuads
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , attoparsec
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
