name:                rdf
version:             0.1.0.0
synopsis:            Representation and Incremental Processing of RDF Data
description:         Representation and Incremental Processing of RDF Data
homepage:            https://github.com/traviswhitaker/rdf
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
 copyright:          Travis Whitaker 2016
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:    Data.RDF.Types
                    , Data.RDF.Encoder.Common
                    , Data.RDF.Encoder.NQuads
                    , Data.RDF.Parser.Common
                    , Data.RDF.Parser.NQuads
  other-modules:      Data.RDF.Internal
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , attoparsec >=0.13 && <0.14
                     , bytestring >=0.10 && <0.11
                     , deepseq >=1.4 && <1.5
                     , text >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark bench-rdf
    type:              exitcode-stdio-1.0
    hs-source-dirs:    bench
    main-is:           Main.hs
    build-depends:     base
                     , bytestring
                     , criterion
                     , deepseq
                     , rdf
                     , text
    ghc-options:       -rtsopts
    default-language:  Haskell2010
